[REFACTOR] fixing payment repository impl sonarqube issues